# routes/auth.js
@@ -1,7 +1,7 @@
 // ==================== Auth Routes ====================
 
 import { Router } from "express";
-import { session, signIn, signOut, signUp, signUpStatus } from "../controllers/auth.js";
+import { session, signIn, signOut, signUp, registerStatus } from "../controllers/auth.js";
 import authMiddleware from "../middlewares/auth.js";
 import rateLimit from "../middlewares/rateLimit.js";
 
@@ -13,8 +13,7 @@ router.post("/sign-up", authLimiter, signUp);
 router.post("/sign-in", authLimiter, signIn);
 router.delete("/sign-out", authMiddleware, signOut);
 router.get("/session", authMiddleware, session);
-router.get("/status", signUpStatus);
-router.get("/sign-up-status", signUpStatus);
+router.get("/register-status", registerStatus);
 
 export default router;
 
